[package]
name = "ra-fsp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ra-fsp-sys = { git = "https://github.com/Ddystopia/ra-fsp-sys" }
cortex-m = { version = "0.7.7", default-features = false }
log = { version = "0.4.27", default-features = false, optional = true }
ra6m3-pac = { git = "https://github.com/Ddystopia/ra", features = ["fsp"], optional = true }

[features]
default = ["log"]

log = ["dep:log"]

mod-r_dmac = ["ra-fsp-sys/mod-r_dmac"]
mod-r_elc = ["ra-fsp-sys/mod-r_elc"]

mod-r_flash_hp = ["ra-fsp-sys/mod-r_flash_hp"]

mod-r_icu = ["ra-fsp-sys/mod-r_icu"]
mod-r_ioport = ["ra-fsp-sys/mod-r_ioport"]
mod-r_ether = ["ra-fsp-sys/mod-r_ether"]
mod-r_ether_phy = ["ra-fsp-sys/mod-r_ether_phy"]
mod-r_ether_phy_target_ics1894 = ["ra-fsp-sys/mod-r_ether_phy_target_ics1894"]
mod-r_ether_phy_target_ksz8091rnb = ["ra-fsp-sys/mod-r_ether_phy_target_ksz8091rnb"]
mod-r_ether_phy_target_ksz8041 = ["ra-fsp-sys/mod-r_ether_phy_target_ksz8041"]
mod-r_ether_phy_target_dp83620 = ["ra-fsp-sys/mod-r_ether_phy_target_dp83620"]

# ra0e1 = ["ra-fsp-sys/ra0e1", "dep:ra0e1-pac"]
# ra2a1 = ["ra-fsp-sys/ra2a1", "dep:ra2a1-pac"]
# ra2a2 = ["ra-fsp-sys/ra2a2", "dep:ra2a2-pac"]
# ra2e1 = ["ra-fsp-sys/ra2e1", "dep:ra2e1-pac"]
# ra2e2 = ["ra-fsp-sys/ra2e2", "dep:ra2e2-pac"]
# ra2e3 = ["ra-fsp-sys/ra2e3", "dep:ra2e3-pac"]
# ra2l1 = ["ra-fsp-sys/ra2l1", "dep:ra2l1-pac"]
# ra4e1 = ["ra-fsp-sys/ra4e1", "dep:ra4e1-pac"]
# ra4e2 = ["ra-fsp-sys/ra4e2", "dep:ra4e2-pac"]
# ra4m1 = ["ra-fsp-sys/ra4m1", "dep:ra4m1-pac"]
# ra4m2 = ["ra-fsp-sys/ra4m2", "dep:ra4m2-pac"]
# ra4m3 = ["ra-fsp-sys/ra4m3", "dep:ra4m3-pac"]
# ra4t1 = ["ra-fsp-sys/ra4t1", "dep:ra4t1-pac"]
# ra4w1 = ["ra-fsp-sys/ra4w1", "dep:ra4w1-pac"]
# ra6e1 = ["ra-fsp-sys/ra6e1", "dep:ra6e1-pac"]
# ra6e2 = ["ra-fsp-sys/ra6e2", "dep:ra6e2-pac"]
# ra6m1 = ["ra-fsp-sys/ra6m1", "dep:ra6m1-pac"]
# ra6m2 = ["ra-fsp-sys/ra6m2", "dep:ra6m2-pac"]
# ra6m3 = ["ra-fsp-sys/ra6m3", "dep:ra6m3-pac"]
# ra6m4 = ["ra-fsp-sys/ra6m4", "dep:ra6m4-pac"]
# ra6m5 = ["ra-fsp-sys/ra6m5", "dep:ra6m5-pac"]
# ra6t1 = ["ra-fsp-sys/ra6t1", "dep:ra6t1-pac"]
# ra6t2 = ["ra-fsp-sys/ra6t2", "dep:ra6t2-pac"]
# ra6t3 = ["ra-fsp-sys/ra6t3", "dep:ra6t3-pac"]
# ra8m1 = ["ra-fsp-sys/ra8m1", "dep:ra8m1-pac"]
# ra8d1 = ["ra-fsp-sys/ra8d1", "dep:ra8d1-pac"]
# ra8t1 = ["ra-fsp-sys/ra8t1", "dep:ra8t1-pac"]

ra0e1 = ["ra-fsp-sys/ra0e1"]
ra2a1 = ["ra-fsp-sys/ra2a1"]
ra2a2 = ["ra-fsp-sys/ra2a2"]
ra2e1 = ["ra-fsp-sys/ra2e1"]
ra2e2 = ["ra-fsp-sys/ra2e2"]
ra2e3 = ["ra-fsp-sys/ra2e3"]
ra2l1 = ["ra-fsp-sys/ra2l1"]
ra4e1 = ["ra-fsp-sys/ra4e1"]
ra4e2 = ["ra-fsp-sys/ra4e2"]
ra4m1 = ["ra-fsp-sys/ra4m1"]
ra4m2 = ["ra-fsp-sys/ra4m2"]
ra4m3 = ["ra-fsp-sys/ra4m3"]
ra4t1 = ["ra-fsp-sys/ra4t1"]
ra4w1 = ["ra-fsp-sys/ra4w1"]
ra6e1 = ["ra-fsp-sys/ra6e1"]
ra6e2 = ["ra-fsp-sys/ra6e2"]
ra6m1 = ["ra-fsp-sys/ra6m1"]
ra6m2 = ["ra-fsp-sys/ra6m2"]
ra6m3 = ["ra-fsp-sys/ra6m3", "dep:ra6m3-pac"]
ra6m4 = ["ra-fsp-sys/ra6m4"]
ra6m5 = ["ra-fsp-sys/ra6m5"]
ra6t1 = ["ra-fsp-sys/ra6t1"]
ra6t2 = ["ra-fsp-sys/ra6t2"]
ra6t3 = ["ra-fsp-sys/ra6t3"]
ra8m1 = ["ra-fsp-sys/ra8m1"]
ra8d1 = ["ra-fsp-sys/ra8d1"]
ra8t1 = ["ra-fsp-sys/ra8t1"]

# [patch.crates-swind-sk]
# ra-fsp-sys = { path = "/home/ddystopia/job/ra-fsp-sys" }
